test/invalid-syntax/58185_unclosed_string/unclosed_string.agu
-- Author: Eduardo Santos, 58185
-- Lexical error: string that does not close its quotes

let main : Unit = 
    print("This string doesn't close)